# calculator

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  README_zh.md  build.sh  compile_test.sh  functions.txt  keypad.md  main.cpp  wiring.txt
docs/: i2c_commu_en.md  i2c_commu_zh.md  keypad.md  wiring.txt
font2h/: compile.sh  font2h.cpp  preview.cpp  pvw.cpp
fritzing/: calculator.fzz  calculator_bom.html
fritzing/Gerber/: calculator_contour.gm1  calculator_copperBottom.gbl  calculator_copperTop.gtl  calculator_drill.txt  calculator_maskBottom.gbs  calculator_maskTop.gts  calculator_pasteMaskTop.gtp  calculator_pnp.xy  calculator_silkBottom.gbo  calculator_silkTop.gto
fritzing/RS-274X/: calculator_contour.gm1  calculator_copperBottom.gbl  calculator_copperTop.gtl  calculator_drill.txt  calculator_maskBottom.gbs  calculator_maskTop.gts  calculator_pasteMaskTop.gtp  calculator_pnp.xy  calculator_silkBottom.gbo  calculator_silkTop.gto
hardware/fritzing/: calculator.fzz  calculator_spice.cir
hardware/fritzing/Gerber/: calculator_copperBottom.gbl  calculator_drill.txt  calculator_maskTop.gts  calculator_pnp.xy
hardware/kicad/: MSP1803_TFT_12pin_Library.kicad_sym  calculator.kicad_pcb  calculator.kicad_prl  calculator.kicad_pro  calculator.kicad_sch  fp-lib-table  keypad.kicad_sch  sym-lib-table
hardware/kicad/MSP1803_TFT_12pin_Library.pretty/: MSP1803_TFT_12pin.kicad_mod
inc/: charmap.hpp  display.hpp  expbuild.hpp  keypad.hpp  keypad_handler.hpp  keypadio.hpp  rgb.h  sdcard.hpp
inc/cas/: constdef.hpp  expand.hpp  expdef.hpp  exptree.hpp  gcd.hpp  intg.hpp  parser.hpp  rational.hpp  treesimp.hpp
inc/cas/simp/: exptreepool.hpp  simp_internal.hpp  simputil.hpp
inc/commu/: commu_audio.hpp  commu_crc.hpp  commu_i2c_link.hpp  commu_packet.hpp  commu_queue.hpp  commu_types.hpp  file_transfer.hpp
inc/dispinterface/: stddisplay.hpp
ino/: keypad.ino
ino/keypad/: keypad.ino
pico-st7735/lib-st7735/include/: ST7735_TFT.h
pico-st7735/lib-st7735/src/: ST7735_TFT.c
src/: display.cpp  main.cpp
src/cas/: expand.cpp
src/cas/simp/: simp_arith.cpp  simp_complex.cpp  simp_coord.cpp  simp_core.cpp  simp_hyper.cpp  simp_log.cpp  simp_matrix.cpp  simp_misc.cpp  simp_number.cpp  simp_prep.cpp  simp_random.cpp  simp_trig.cpp  simplify.cpp  sort_items.cpp
test/: test_intg_init.cpp  test_keypad.cpp  test_random_intg.cpp  test_treesimp.cpp  testintg.cpp  treesimp.txt
test_fonts/: CMakeLists.txt  testbuild.sh  testmain.cpp
